JSW Devsb/src/objects/NSR_C_F_Value_Changes__c.object
<CustomObject>
    <fields>
        <fullName>Code_Formula__c</fullName>
        <formula>Plant__c +&apos;:&apos;+  Storage_Location__c +&apos;:&apos;+ Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_Plant__c</fullName>
        <label>MFG Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Plant_Master__c</referenceTo>
        <relationshipLabel>NSR C&amp;F Value Changes</relationshipLabel>
        <relationshipName>NSR_C_F_Value_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NSR C&amp;F Value Changes</relationshipLabel>
        <relationshipName>NSR_C_F_Value_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NSR C&amp;F Value Changes</label>
    <nameField>
        <label>NSR C&amp;F Value Changes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSR C&amp;F Value Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>